--- a/TODO
+++ b/TODO
@@ -1,8 +1,13 @@
 o) does this actually work with R version 3.0?
+o) test this locally via dockerfile if rocker has a 3.0 image
+
+o) a "translator" that emits the R code from a parsed rye file
 
 big features:
     o) what else needs to be in the stdlib? other common lisp features
-    o) more tests; big integration-type tests?
+    o) more tests; big integration-type tests? coverage check?
     o) better docs?
 
 inst/CITATION?
+
+
