--- a/README.Rmd
+++ b/README.Rmd
@@ -99,6 +99,10 @@ export PATH="$(Rscript -e 'cat(dirname(system.file("exec", "rye", package = "rye
 (define x 10)
 (+ x 5)  ; => 15
 
+; Destructuring
+(define (a b . rest) (list 1 2 3 4))
+(list a b rest)  ; => (1 2 (3 4))
+
 ; Functions
 (define factorial
   (lambda (n)
@@ -163,7 +167,7 @@ access to all base R functions.
 - `when`, `unless`, `and`, `or`, `cond`, `case`
 
 **Binding & Looping:**
-- `let`, `let*`, `letrec`
+- `let`, `let*`, `letrec`, `destructuring-bind`
 - `while`, `for`
 
 **Threading Macros:**
