--- a/README.Rmd
+++ b/README.Rmd
@@ -141,6 +141,12 @@ export PATH="$(Rscript -e 'cat(dirname(system.file("exec", "rye", package = "rye
 - `defmacro` - Define macros
 - `quasiquote` / `` ` `` - Template with selective evaluation
 - `~` - Formula (for R modeling)
+- `call/cc` / `call-with-current-continuation` - Capture the current continuation
+
+### Continuations
+
+Rye provides Scheme-style, multi-shot continuations via `call/cc`. Continuations
+capture Rye-level control flow; side effects in raw R code are not rewound.
 
 ### Standard Library
 
