--- a/vignettes/stdlib-reference.Rmd
+++ b/vignettes/stdlib-reference.Rmd
@@ -14,8 +14,8 @@ knitr::opts_chunk$set(collapse = TRUE, comment = "#>")
 ```
 
 Rye ships with a small standard library implemented in R, plus additional Rye
-source modules. The REPL loads the base R stdlib by default; you can also load
-modules from `inst/rye/` when you want more macros and helpers.
+source modules. `rye_load_stdlib()` loads the base R stdlib and the Rye modules
+from `inst/rye/` by default.
 
 For the full, per-function reference, see the individual stdlib reference pages:
 
@@ -37,10 +37,10 @@ For the full, per-function reference, see the individual stdlib reference pages:
 (load "error")     ; try/catch/finally
 ```
 
-From R, you can load all modules with:
+From R, you can load the full stdlib with:
 
 ```r
-env <- rye_load_stdlib(load_files = TRUE)
+env <- rye_load_stdlib()
 ```
 
 ## Core list operations
@@ -109,6 +109,7 @@ env <- rye_load_stdlib(load_files = TRUE)
 The base R parts of the stdlib implementation live in `R/stdlib.R`. The rye
 parts are organized by topic in `inst/rye/`:
 
+- `stdlib-core.rye`
 - `binding.rye`
 - `control.rye`
 - `error.rye`
