move translator app to .rye code

--- a/TODO
+++ b/TODO
@@ -5,7 +5,6 @@ o) refactor these stdlib files to use (module ...)
 
 o) Can we rewrite any of the current code in rye? Any functionality that can be streamlined?
 * Stdlib
-* Translate app
 * formatting/printing
 * Destructuring utilities
 
@@ -15,4 +14,4 @@ o) Look for any R code that can be refactored to make it simpler
 
 o) How to calculate test coverage of .rye code
 
-o) Tests for .rye code
+o) More tests for .rye code
