--- a/TODO
+++ b/TODO
@@ -1,12 +1,9 @@
 o) refactor stdlib into different files, especially -core is too big
-
-o) Loading in R/stdlib.R: we don't need an express list right? use import
 o) refactor these stdlib files to use (module ...)
+o) Loading in R/stdlib.R: we don't need an express list right? use import
 
 o) Can we rewrite any of the current code in rye? Any functionality that can be streamlined?
 * Stdlib
-* Destructuring utilities
-
 
 o) Look for any R code that’s left over or not used
 
@@ -17,3 +14,5 @@ o) How to calculate test coverage of .rye code
 o) More tests for .rye code
 
 o) fix everything in `make check`
+
+o) this is awfully slow
