--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,9 @@ devtools::load_all()
 library(rye)
 
 # Start the REPL
-rye_repl()
+engine <- RyeEngine$new()
+engine$load_stdlib()
+engine$repl()
 ```
 
 ## Command Line
