--- a/vignettes/macros.Rmd
+++ b/vignettes/macros.Rmd
@@ -87,11 +87,13 @@ If you nest quasiquotes, only the innermost unquote is evaluated:
 
 ## Macro expansion
 
-You can inspect expansions from R using `rye_macroexpand()`:
+You can inspect expansions from R using `engine$macroexpand()`:
 
 ```{r eval=FALSE}
-rye_eval(rye_read("(defmacro when (test body) \"Evaluate body when test is truthy.\" `(if ,test ,body #nil))")[[1]])
-rye_macroexpand(rye_read("(when #t 1)")[[1]])
+engine <- RyeEngine$new()
+engine$load_stdlib()
+engine$eval(engine$read("(defmacro when (test body) \"Evaluate body when test is truthy.\" `(if ,test ,body #nil))")[[1]])
+engine$macroexpand(engine$read("(when #t 1)")[[1]])
 ```
 
 To expand only one level, use `macroexpand-1` from Rye code:
