--- a/vignettes/r-interop.Rmd
+++ b/vignettes/r-interop.Rmd
@@ -67,7 +67,9 @@ The [data analysis example](examples.html#data-analysis) shows a small analysis 
 from Rye that uses `data.frame`, `mean`, and `lm`. You can run it with:
 
 ```{r eval=FALSE}
-rye_load_file(system.file("examples", "data-analysis.rye", package = "rye"))
+engine <- RyeEngine$new()
+engine$load_stdlib()
+engine$load_file(system.file("examples", "data-analysis.rye", package = "rye"))
 ```
 
 ## Standard library helpers
