--- a/vignettes/stdlib-reference.Rmd
+++ b/vignettes/stdlib-reference.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(collapse = TRUE, comment = "#>")
 ```
 
 Rye ships with a small standard library implemented in R, plus additional Rye
-source modules. `rye_load_stdlib()` loads the base R stdlib and the Rye modules
+source modules. `engine$load_stdlib()` loads the base R stdlib and the Rye modules
 from `inst/rye/` by default.
 
 For the full, per-function reference, see the individual stdlib reference pages:
@@ -40,7 +40,8 @@ For the full, per-function reference, see the individual stdlib reference pages:
 From R, you can load the full stdlib with:
 
 ```r
-env <- rye_load_stdlib()
+engine <- RyeEngine$new()
+engine$load_stdlib()
 ```
 
 ## Core list operations
