--- a/TODO
+++ b/TODO
@@ -14,13 +14,12 @@ o) remove translate R api
 
 o) translate doesn't correctly backtick-quote bad idents
 
+o) help.R should be integrated into OO classes somehow
+
 o) too many functions left around being called from these new classes that implement basically all functionality, defeats the purpose
-
-o) the cli, repl, help might benefit from oo refactoring
-
 o) functions like rye_parse should not refer to a default env, that entangles evaluation with a different engine instance
-o) rather the rye_load_stdlib function should become a method of one of the classes
-o) gensym should also be local to the macroexpander for closely related reasons, right now it's package-global state and doesn't behave reasonably in the context of multiple engine instances
 o) do we still need the globals.R file?
-o) split new classes into multiple files
 o) this default engine stuff is bad, certainly when used in these functions internally
+
+o) the cli, repl might benefit from oo refactoring
+
