--- a/TODO
+++ b/TODO
@@ -11,12 +11,12 @@ o) remove translate R api
 
 o) translate doesn't correctly backtick-quote bad idents
 
-o) help.R should be integrated into OO classes somehow
+o) the cli, repl might benefit from oo refactoring
 
 o) too many functions left around being called from these new classes that implement basically all functionality, defeats the purpose
-o) functions like rye_parse should not refer to a default env, that entangles evaluation with a different engine instance
 o) do we still need the globals.R file?
 o) this default engine stuff is bad, certainly when used in these functions internally
 
-o) the cli, repl might benefit from oo refactoring
+o) classes that have instances of other classes horizontally as attributes
 
+o) do we still need to assign these macro registry etc into the environment?
