--- a/TODO
+++ b/TODO
@@ -1,14 +1,15 @@
-o) no more readme.html
-o) Look for any R code that’s left over or not used
-o) Look for any R code that can be refactored to make it simpler
+o) unbreak configure script
 
-o) the cli, repl might benefit from oo refactoring
+o) OO refactor of repl
+o) rewrite cli to use docopt
 
 o) classes that have instances of other classes horizontally as attributes
 o) do we still need to assign these macro registry etc into the environment?
 o) unlockBinding note
 
 o) performance optimizations: use profiling and benchmarking
+o) Look for any R code that’s left over or not used
+o) Look for any R code that can be refactored to make it simpler
 o) How to calculate test coverage of .rye code
 o) More tests for .rye code
 o) pkgdown warning about site url
